<resources>
    <string name="app_name">Act 5</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>
    <string name="bsignin">Sign-in</string>
    <string name="tEmail">Email :</string>
    <string name="tPassword">Password :</string>

</resources>